WTF::isValidEnum() has a typo in static_assert making it a tautological comparison <https://webkit.org/b/212290>

Reviewed by Yusuke Suzuki.

* wtf/EnumTraits.h:
(WTF::isValidEnum): Use sizeof(std::underlying_type_t<E>)
instead of std::underlying_type_t<E>() to fix the bug.


Canonical link: https://commits.webkit.org/225155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262092 268f45cc-cd09-0410-ab3c-d52691b4dbfc